# ontologizer

./: README.md  package-lock.json  package.json
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: exact_fisher.rs  goannot.rs  gontology.rs  main.rs  window_handler.rs
src/lib/components/layout/: Footer.svelte  Header.svelte  ScrollToTop.svelte
src/lib/components/layout/header/: BreadCrumb.svelte  FullScreen.svelte  ThemeSwitch.svelte  Translate.svelte
src/lib/components/layout/sidebar/: HighSidebar.svelte
src/routes/: +layout.svelte  +page.svelte  statsbox.svelte
src/routes/about/: +page.svelte
src/routes/alerts/: +page.svelte
src/routes/analysis/: +page.svelte
src/routes/console/: +page.svelte
src/routes/contacts/: +page.svelte
src/routes/profile/: +page.svelte
src/routes/settings/: +page.svelte
