[package]
name = "Ontologizer"
version = "1.0.0"
description = "Rust (tauri) implementation of the Ontologizer application for characterizing GO Term Overrepresentation"
authors = ["Peter N. Robinson"]
license = "MIT"
repository = ""
default-run = "app"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }

[dependencies]
serde_json = "1.0.114"
serde = { version = "1.0.197", features = ["derive"] }
tauri = { version = "1.6.0", features = [ "dialog-open", "fs-read-file"] }
lazy_static = "1.4"
num = "0.4"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
